--- a/public/index.html
+++ b/public/index.html
@@ -1196,6 +1196,7 @@
                 if(e.which === 13 && e.shiftKey && is_send_press == false) {
                     is_send_press = true;
                     e.preventDefault();
+                    alert("detected")
                     //Generate();
                     //$(this).closest("form").submit();
                 }
