--- a/public/index.html
+++ b/public/index.html
@@ -1194,7 +1194,7 @@
             }
             $("#send_textarea").keypress(function (e) {
                 if(e.which === 13 && e.shiftKey && is_send_press == false) {
-                    is_send_press = true;
+                    //is_send_press = true;
                     e.preventDefault();
                     alert("detected")
                     //Generate();
