--- a/public/index.html
+++ b/public/index.html
@@ -1193,6 +1193,7 @@
                 select_selected_character(this_chid);
             }
             $("#send_textarea").keypress(function (e) {
+                alert(e.shiftKey)
                 if(e.which === 13 && e.shiftKey && is_send_press == false) {
                     //is_send_press = true;
                     e.preventDefault();
