--- a/public/index.html
+++ b/public/index.html
@@ -1204,10 +1204,9 @@
             }
             $("#send_textarea").keypress(function (e) {
                 if(e.which === 13 && e.shiftKey && is_send_press == false && !isMobile) {
-                    //is_send_press = true;
+                    is_send_press = true;
                     e.preventDefault();
-                    alert("detected")
-                    //Generate();
+                    Generate();
                     //$(this).closest("form").submit();
                 }
             });
