--- a/public/index.html
+++ b/public/index.html
@@ -1203,7 +1203,7 @@
                 select_selected_character(this_chid);
             }
             $("#send_textarea").keypress(function (e) {
-                if(e.which === 13 && e.shiftKey && is_send_press == false && !isMobile) {
+                if(e.which === 13 && !e.shiftKey && is_send_press == false && !isMobile) {
                     is_send_press = true;
                     e.preventDefault();
                     Generate();
