--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <script src="scripts/jquery-cookie-1.4.1.min.js"></script>
     <script src="scripts/showdown.min.js"></script>
     <script src="scripts/jquery.lazyloadxt.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
     <link id="base_theme" rel="stylesheet" type="text/css" href="css/designs.css">
     <link rel="stylesheet" href="css/bg_load.css">
